{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 68,
  "lineage": "106c0560-d0ad-4a1a-c09d-fbde4b4b6f9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb79e13713eaf358",
            "associate_with_private_ip": "10.10.0.5",
            "association_id": "eipassoc-04753b5065c7d9b94",
            "domain": "vpc",
            "id": "eipalloc-0cb79e13713eaf358",
            "instance": "i-075224ae6566a9f06",
            "network_border_group": "us-west-2",
            "network_interface": "eni-05ba019783d6a42e2",
            "private_dns": "ip-10-10-0-5.us-west-2.compute.internal",
            "private_ip": "10.10.0.5",
            "public_dns": "ec2-35-163-177-167.us-west-2.compute.amazonaws.com",
            "public_ip": "35.163.177.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_network_interface.eni",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046ee6ee5211b9abc",
            "associate_with_private_ip": "10.10.0.69",
            "association_id": "eipassoc-02ec509d1978e3bcf",
            "domain": "vpc",
            "id": "eipalloc-046ee6ee5211b9abc",
            "instance": "i-0b332a5f02fc23be1",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06c996e73bb3d0b3d",
            "private_dns": "ip-10-10-0-69.us-west-2.compute.internal",
            "private_ip": "10.10.0.69",
            "public_dns": "ec2-54-218-246-4.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.246.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_network_interface.eni",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bad3c587fe60d89",
            "arn": "arn:aws:ec2:us-west-2:687514835695:instance/i-075224ae6566a9f06",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075224ae6566a9f06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05ba019783d6a42e2"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ba019783d6a42e2",
            "private_dns": "ip-10-10-0-5.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.5",
            "public_ip": "35.163.177.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e205f442a81e0486",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020e4324fa8dc016f",
            "tags": {
              "Name": "jumphost-server"
            },
            "tags_all": {
              "Name": "jumphost-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e270b1f2ec77135"
            ]
          },
          "dependencies": [
            "aws_network_interface.eni",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bad3c587fe60d89",
            "arn": "arn:aws:ec2:us-west-2:687514835695:instance/i-0b332a5f02fc23be1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b332a5f02fc23be1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06c996e73bb3d0b3d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c996e73bb3d0b3d",
            "private_dns": "ip-10-10-0-69.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.69",
            "public_ip": "54.218.246.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042a6b4d9ddb47caf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c429998d7dce9ad4",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ffe6c7114741d07",
              "sg-08e270b1f2ec77135"
            ]
          },
          "dependencies": [
            "aws_network_interface.eni",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bad3c587fe60d89",
            "arn": "arn:aws:ec2:us-west-2:687514835695:instance/i-02b1a03b5e2363a32",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b1a03b5e2363a32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ee643dab80200c52"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee643dab80200c52",
            "private_dns": "ip-10-10-0-133.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cd3ea4d17a02435",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a7aaccdaeec9f6",
            "tags": {
              "Name": "db-server"
            },
            "tags_all": {
              "Name": "db-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e270b1f2ec77135"
            ]
          },
          "dependencies": [
            "aws_network_interface.eni",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:internet-gateway/igw-01c879f33d79da4ec",
            "id": "igw-01c879f33d79da4ec",
            "owner_id": "687514835695",
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:network-interface/eni-05ba019783d6a42e2",
            "attachment": [
              {
                "attachment_id": "eni-attach-0bdc7f7d60a1107cb",
                "device_index": 0,
                "instance": "i-075224ae6566a9f06"
              }
            ],
            "id": "eni-05ba019783d6a42e2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:8d:1c:62:ef:3f",
            "owner_id": "687514835695",
            "private_ip": "10.10.0.5",
            "private_ip_list": [
              "10.10.0.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.0.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08e270b1f2ec77135"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020e4324fa8dc016f",
            "tags": {
              "Name": "jumphost"
            },
            "tags_all": {
              "Name": "jumphost"
            }
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:network-interface/eni-06c996e73bb3d0b3d",
            "attachment": [
              {
                "attachment_id": "eni-attach-04d4f4ae78b4e1301",
                "device_index": 0,
                "instance": "i-0b332a5f02fc23be1"
              }
            ],
            "id": "eni-06c996e73bb3d0b3d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:d1:c6:75:36:c5",
            "owner_id": "687514835695",
            "private_ip": "10.10.0.69",
            "private_ip_list": [
              "10.10.0.69"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.0.69"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02ffe6c7114741d07",
              "sg-08e270b1f2ec77135"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c429998d7dce9ad4",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            }
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:network-interface/eni-0ee643dab80200c52",
            "attachment": [
              {
                "attachment_id": "eni-attach-04fb97bd0872162b8",
                "device_index": 0,
                "instance": "i-02b1a03b5e2363a32"
              }
            ],
            "id": "eni-0ee643dab80200c52",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:a4:42:f2:ac:b1",
            "owner_id": "687514835695",
            "private_ip": "10.10.0.133",
            "private_ip_list": [
              "10.10.0.133"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.0.133"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08e270b1f2ec77135"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a7aaccdaeec9f6",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            }
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:route-table/rtb-066d2b5d75b82b7d6",
            "id": "rtb-066d2b5d75b82b7d6",
            "owner_id": "687514835695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c879f33d79da4ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082b94fd84e29f939",
            "route_table_id": "rtb-066d2b5d75b82b7d6",
            "subnet_id": "subnet-020e4324fa8dc016f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00847a119b348bcee",
            "route_table_id": "rtb-066d2b5d75b82b7d6",
            "subnet_id": "subnet-0c429998d7dce9ad4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumphost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:security-group/sg-083ab03b5ff1209d4",
            "description": "Allow Internet Ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083ab03b5ff1209d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_internet_inbound",
            "name_prefix": "",
            "owner_id": "687514835695",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:security-group/sg-02ffe6c7114741d07",
            "description": "Allow Internet Ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ffe6c7114741d07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_inbound",
            "name_prefix": "",
            "owner_id": "687514835695",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:subnet/subnet-020e4324fa8dc016f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e4324fa8dc016f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687514835695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jumphost"
            },
            "tags_all": {
              "Name": "jumphost"
            },
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:subnet/subnet-0c429998d7dce9ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c429998d7dce9ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687514835695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:subnet/subnet-0c1a7aaccdaeec9f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a7aaccdaeec9f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687514835695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            },
            "vpc_id": "vpc-0f5639ac6ca32a711"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687514835695:vpc/vpc-0f5639ac6ca32a711",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/24",
            "default_network_acl_id": "acl-096609734ad6a6a20",
            "default_route_table_id": "rtb-033c58095a80f608e",
            "default_security_group_id": "sg-08e270b1f2ec77135",
            "dhcp_options_id": "dopt-0eb87a97c0e60119d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5639ac6ca32a711",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033c58095a80f608e",
            "owner_id": "687514835695"
          }
        }
      ]
    }
  ]
}